[package]
name = "cbgen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
log-panics = { version="2.0.0", features = [ "with-backtrace" ] }
simple-logging = "2.0.2"
hematite-nbt = "0.5.2"
